--- a/index-START.html
+++ b/index-START.html
@@ -182,6 +182,8 @@
     </li>
   </ul>
 <script>
+  const timeNodes = document.querySelectorAll('[data-time]');
+  console.log(timeNodes);
 </script>
 </body>
 </html>
