--- a/index-START.html
+++ b/index-START.html
@@ -185,14 +185,26 @@
   // const timeNodes = [...document.querySelectorAll('[data-time]')];
   const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
   // using the spread operator to covert the nodelist into an array
-  console.log(timeNodes);
+  // console.log(timeNodes);
 
   const times = timeNodes
     .map(node => node.dataset.time)
     .map(time => {
       const [mins, secs] = time.split(':').map(parseFloat);
-      console.log(mins,secs)
+      return (mins * 60) + secs;
     })
+
+    console.log(times)
+
+//     const seconds = timeNodes
+//     .map(node => node.dataset.time)
+//     .map(timeCode => {
+//       const [mins, secs] = timeCode.split(':').map(parseFloat);
+//       return (mins * 60) + secs;
+//     })
+//     .reduce((total, vidSeconds) => total + vidSeconds);
+
+// console.log(seconds);
 
 </script>
 </body>
