printing final statement with hours, minutes, seconds variables

--- a/index-START.html
+++ b/index-START.html
@@ -200,9 +200,7 @@
     const secondsAfterHours = totalSeconds % 3600;
     const minutes = Math.floor(secondsAfterHours / 60);
     const seconds = secondsAfterHours % 60;
-    console.log(hours)
-    console.log(minutes)
-    console.log(seconds)
+    console.log(`${hours} hours, ${minutes} minutes, ${seconds} seconds`)
 
 //     const seconds = timeNodes
 //     .map(node => node.dataset.time)
